--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@douyinfe/semi-ui": "^2.49.2",
+    "next": "14.0.4",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-spring": "^9.7.3",
+    "three": "^0.160.0",
+    "tronweb": "^5.3.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.160.0",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5"
   }
 }
